Cockatrice Change Log

==================== Cockatrice 0.7.2 ====================

* Enable auto-commit


==================== Cockatrice 0.7.1 ====================

* Improve CLI


==================== Cockatrice 0.7.0 ====================

* Implement gRPC Server


==================== Cockatrice 0.6.3 ====================

* Bump up version


==================== Cockatrice 0.6.2 ====================

* Fix a bug in index recovery process at server startup
* Upgrade Janome Tokenizer to 0.3.7
* Support JSON and YAML
* Add --log-file-max-bytes, --log-file-backup-count, --http-log-file-max-bytes, --http-log-file-backup-count flags


==================== Cockatrice 0.6.1 ====================

* Fix document build error


==================== Cockatrice 0.6.0 ====================

* Synchronize the latest index from the leader node
* Print default values in CLI usage
* Force log compaction
* Expose snapshot
* Add serializer and deserializer
* Disable ram storage
* Add Cluster API