@@ -76,8 +76,7 @@ setup(
         'grpcio-tools==1.17.1',
         'protobuf==3.6.1',
         'python-mimeparse==1.6.0',
-        'requests==2.21.0',
-        'locked-dict==0.1.0'
+        'requests==2.21.0'
     ],
     entry_points={
         'console_scripts': [
